# SmartCalc-

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  dvi.md  main.cc  tests.cc
src/Controller/: controller.h
src/Model/: model.cc  model.h
src/View/credit_calculator/: credit.cc  credit.h  credit.ui
src/View/main_calculator/: calc.cc  calc.h  calc.ui
src/qcp/: CMakeLists.txt
